--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,12 @@
     font-weight: bold;
     font-style: normal;
   }
+@font-face {
+  font-family: "MathxR";
+  src: url('../../public/fonts/mathkatexr.ttf');
+  font-weight: bold;
+  font-style:normal;
+}
   .navbar-brand:hover, .navbar-brand:focus{
     color: #422B64 !important;
     opacity: 0.9;
